--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "chalk": "^4.1.2",
     "inquirer": "^8.2.4",
     "spellchecker": "^3.7.1"
