--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "inquirer": "^8.2.4",
     "spellchecker": "^3.7.1"
   }
