--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "inquirer": "^8.2.4",
+    "languagetool-api": "^1.0.0",
     "spellchecker": "^3.7.1"
   }
 }
